--- a/assets/html/question.html
+++ b/assets/html/question.html
@@ -10,13 +10,19 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Playwrite+VN:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prata&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Playwrite+VN:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prata&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <title>QUESTIONS</title>
   </head>
   <body>
     <header>
       <div id="headerBox">
         <div>
-          <img src="../img/epicode_logo.png" alt="Logo di Epicode" />
+          <img src="../img/epicode_logo.png" alt="Logo di Epicode" id="logo" />
         </div>
         <form id="timer">qui ci va il timer</form>
       </div>
@@ -24,24 +30,24 @@
     <main>
       <form>
         <div id="mainQuest">
-          <h2>parte di domanda senza grassetto</h2>
-          <h1>parte di domanda in grassetto</h1>
+          <h2>no grassetto</h2>
+          <h1>grassetto</h1>
         </div>
         <div>
-          <div>
-            <span> risposta1</span>
-            <span> risposta2</span>
-          </div>
-          <div>
-            <span>risposta3</span>
-            <span>risposta4</span>
+          <div id="answerbox">
+            <span class="answer"> risposta1</span>
+            <span class="answer"> risposta2</span>
+            <span class="answer">risposta3</span>
+            <span class="answer">risposta4</span>
           </div>
         </div>
       </form>
     </main>
     <footer>
       <form>
-        <div><span>QUESTION</span><span> 1</span><span>/10</span></div>
+        <div id="questionsBox">
+          <span>QUESTION</span><span> 1</span><span>/10</span>
+        </div>
       </form>
     </footer>
   </body>
