Page almost finished

--- a/Index.html
+++ b/Index.html
@@ -38,9 +38,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BenchMark</title>
     <link rel="stylesheet" href="./assets/css/welcom.css" />
+    <!-- <link rel="stylesheet" href="#" />
     <link rel="stylesheet" href="#" />
     <link rel="stylesheet" href="#" />
-    <link rel="stylesheet" href="#" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> -->
+    <!-- <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    /> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com/" />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -49,7 +63,7 @@
     </header>
 
     <main>
-      <h1>Welcome to <b>your exam</b></h1>
+      <h1>Welcome to <span>your exam</span></h1>
       <h3>Instructions</h3>
       <p>
         We don't expect most engineers to know the answers to all of these
@@ -66,14 +80,12 @@
         </li>
         <li>This exam will take approx. <strong>0-5 min</strong></li>
       </ul>
+      <div class="checkbox">
+        <input type="checkbox" class="custom-checkbox" />
+        I promise to answer myself without the help of anyone
+        <button>PROCEED</button>
+      </div>
     </main>
-
-    <footer>
-      <input type="checkbox" />
-      I promise to answer myself without the help of anyone
-
-      <button>PROCEED</button>
-    </footer>
 
     <script src="#"></script>
     <script src="#"></script>
