--- a/assets/html/question.html
+++ b/assets/html/question.html
@@ -34,9 +34,11 @@
           <h1>grassetto</h1>
         </div>
         <div>
-          <div id="answerbox">
-            <span class="answer"> risposta1</span>
-            <span class="answer"> risposta2</span>
+          <div class="answerbox">
+            <span class="answer">risposta1</span>
+            <span class="answer">risposta2</span>
+          </div>
+          <div class="answerbox">
             <span class="answer">risposta3</span>
             <span class="answer">risposta4</span>
           </div>
