fatti degli aggiustamenti
in attesa della decisione dei fonts e delle font-size

--- a/assets/html/question.html
+++ b/assets/html/question.html
@@ -48,7 +48,8 @@
     <footer>
       <form>
         <div id="questionsBox">
-          <span>QUESTION</span><span> 1</span><span>/10</span>
+          <span>QUESTION</span><span> 1</span
+          ><span class="totalQuestions">/10</span>
         </div>
       </form>
     </footer>
