--- a/Index.html
+++ b/Index.html
@@ -38,13 +38,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BenchMark</title>
     <link rel="stylesheet" href="./assets/css/welcom.css" />
-    <!-- <link rel="stylesheet" href="#" />
+    <link rel="stylesheet" href="#" />
     <link rel="stylesheet" href="#" />
     <link rel="stylesheet" href="#" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!-- <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
@@ -58,17 +58,16 @@
   </head>
 
   <body>
-    <header>
-      <img src="./assets/img/epicode_logo.png" alt="logo" />
-    </header>
-
     <main>
+      <img src="./assets/img/epicode_logo.png" alt="logo" />
       <h1>Welcome to <span>your exam</span></h1>
-      <h3>Instructions</h3>
-      <p>
-        We don't expect most engineers to know the answers to all of these
-        question, so don't worry if you're unsure of a few of them
-      </p>
+      <div id="instructions">
+        <h3>Instructions</h3>
+        <p>
+          We don't expect most engineers to know the answers to all of these
+          question, so don't worry if you're unsure of a few of them
+        </p>
+      </div>
       <ul>
         <li>
           Each question is <strong>timed</strong> and can only be
