--- a/assets/html/resultspage.html
+++ b/assets/html/resultspage.html
@@ -7,8 +7,13 @@
     <link rel="stylesheet" href="/assets/css/resultspage.css" />
   </head>
   <body>
+    
+    </div>
     <div class="container">
-      <h2 class="brand">Epicode</h2>
+      <div class="logo-container">
+        <img src="../img/epicode_logo.png" alt="Epicode Logo" class="logo" />
+      </div>
+      
       <h1 class="title">Results</h1>
       <p class="subtitle">The summary of your answers:</p>
 
@@ -37,5 +42,6 @@
       </div>
       <button class="rate-btn" RATE US></button>
     </div>
+    <script src="/assets/js/resultspage.js"></script>
   </body>
 </html>
