--- a/assets/html/resultspage.html
+++ b/assets/html/resultspage.html
@@ -40,7 +40,7 @@
           <p>2/6 questions</p>
         </div>
       </div>
-      <button class="rate-btn" RATE US></button>
+      <button class="rate-btn" <p>RATE US</p></button>
     </div>
     <script src="/assets/js/resultspage.js"></script>
   </body>
