Stars Feedback JS+HTML+CSS

--- a/assets/html/feedback.html
+++ b/assets/html/feedback.html
@@ -24,17 +24,66 @@
       </p>
       <form>
         <div class="voto">
-          <img src="../img/star.svg" alt="stella" class="star" />
-          <img src="../img/star.svg" alt="stella" class="star" />
-          <img src="../img/star.svg" alt="stella" class="star" />
-          <img src="../img/star.svg" alt="stella" class="star" />
-          <img src="../img/star.svg" alt="stella" class="star" />
-          <img src="../img/star.svg" alt="stella" class="star" />
-          <img src="../img/star.svg" alt="stella" class="star" />
-          <img src="../img/star.svg" alt="stella" class="star" />
-          <img src="../img/star.svg" alt="stella" class="star" />
-          <img src="../img/star.svg" alt="stella" class="star" />
-          <img src="../img/star.svg" alt="stella" class="star" />
+          <img
+            src="../img/star.svg"
+            data-value="1"
+            alt="stella 1"
+            class="star"
+          />
+          <img
+            src="../img/star.svg"
+            data-value="2"
+            alt="stella 2"
+            class="star"
+          />
+          <img
+            src="../img/star.svg"
+            data-value="3"
+            alt="stella 3"
+            class="star"
+          />
+          <img
+            src="../img/star.svg"
+            data-value="4"
+            alt="stella 4"
+            class="star"
+          />
+          <img
+            src="../img/star.svg"
+            data-value="5"
+            alt="stella 5"
+            class="star"
+          />
+          <img
+            src="../img/star.svg"
+            data-value="6"
+            alt="stella 6"
+            class="star"
+          />
+          <img
+            src="../img/star.svg"
+            data-value="7"
+            alt="stella 7"
+            class="star"
+          />
+          <img
+            src="../img/star.svg"
+            data-value="8"
+            alt="stella 8"
+            class="star"
+          />
+          <img
+            src="../img/star.svg"
+            data-value="9"
+            alt="stella 9"
+            class="star"
+          />
+          <img
+            src="../img/star.svg"
+            data-value="10"
+            alt="stella 10"
+            class="star"
+          />
         </div>
         <p id="leave">Leave us an open feedback about your experience so far</p>
         <input
@@ -47,5 +96,6 @@
         </div>
       </form>
     </main>
+    <script src="../js/feedback.js"></script>
   </body>
 </html>
