--- a/assets/html/feedback.html
+++ b/assets/html/feedback.html
@@ -3,18 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Feedback</title>
+    <link rel="stylesheet" href="../css/feedback.css" />
+
+    <!-- Outfit Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/feedback.css" />
+
+    <!-- Inter Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
+  <body>
+    </head>
   <body>
     <header>
-      <img class="logo" src="../img/epicode_logo.png" alt="" />
+      <img class="logo" src="../img/epicode_logo.png" alt="epicode_logo" />
     </header>
     <main>
       <h1>Tell us how it's going</h1>
@@ -85,14 +98,16 @@
             class="star"
           />
         </div>
-        <p id="leave">Leave us an open feedback about your experience so far</p>
+        <div id="feedbackZone">
+          <p id="leave">Leave us an open feedback about your experience so far</p>
         <input
           type="text"
-          class="recensione"
+          class="feedback"
           placeholder="Write your comment here"
         />
+        </div>
         <div>
-          <button class="tasto" type="button">MORE INFO</button>
+          <a href="https://epicode.com/it/candidati/?utm_source=googleads&utm_campaign=brand&utm_adgroup=brandphrase&utm_term=epicode&utm_campaign=Brand&utm_source=adwords&utm_medium=ppc&hsa_acc=1246633295&hsa_cam=11897141170&hsa_grp=115607542316&hsa_ad=717726046297&hsa_src=g&hsa_tgt=kwd-1083842420863&hsa_kw=epicode&hsa_mt=e&hsa_net=adwords&hsa_ver=3&gad_source=1&gclid=CjwKCAiAt4C-BhBcEiwA8Kp0Cbkb7P-2a-g3UnG9O-_0jgsOrdRVh4anHRdazEhj4K_DAWDxYcE2NBoCincQAvD_BwE"><button class="moreInfo" type="button">MORE INFO</button></a>
         </div>
       </form>
     </main>
