--- a/assets/html/question.html
+++ b/assets/html/question.html
@@ -1,69 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Questions</title>
+
+    <!-- Outfit Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Inter Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="../css/question.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Playwrite+VN:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prata&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Playwrite+VN:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prata&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <title>QUESTIONS</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body>
     <header>
-      <div id="headerBox">
-        <div>
-          <img src="../img/epicode_logo.png" alt="Logo di Epicode" id="logo" />
+      <img src="../img/epicode_logo.png" alt="Epicode - logo" />
+
+      <!-- timer -->
+      <div id="timerContainer">
+        <svg width="150" height="150">
+          <!-- Timer Base -->
+          <circle
+            cx="75"
+            cy="75"
+            r="70"
+            stroke="#808080"
+            stroke-width="10"
+            fill="none"
+          />
+
+          <!-- Timer Progression Bar -->
+          <circle
+            id="progressCircle"
+            cx="75"
+            cy="75"
+            r="70"
+            stroke="#00ffff"
+            stroke-width="10"
+            fill="none"
+            stroke-dasharray="440"
+            stroke-dashoffset="0"
+          />
+        </svg>
+        <div id="timerTextContainer">
+          <div id="timerLabelTop">Second</div>
+          <div id="timerText">30</div>
+          <div id="timerLabelBottom">Remaining</div>
         </div>
-        <form id="timer">
-          <div id="timerDiv">
-            <canvas id="donutTimer"></canvas>
-            <div id="timerString">
-              <div id="stringInSeconds">seconds</div>
-              <span id="timerText"></span>
-              <div id="remainingStrings">remaining</div>
-            </div>
-          </div>
-        </form>
       </div>
     </header>
+
     <main>
-      <form>
-        <div id="mainQuest">
-          <h2>no grassetto</h2>
-          <h1>grassetto</h1>
-        </div>
-        <div>
-          <div class="answerbox">
-            <span class="answer">risposta1</span>
-            <span class="answer">risposta2</span>
-          </div>
-          <div class="answerbox">
-            <span class="answer">risposta3</span>
-            <span class="answer">risposta4</span>
-          </div>
-        </div>
-      </form>
+      <div id="quizContainer">
+        <h1 id="question"></h1>
+        <div id="answers"></div>
+      </div>
+
+      <!-- Contenitore per il grafico a ciambella -->
+      <div
+        id="resultsContainer"
+        style="display: none; text-align: center; margin-top: 30px"
+      >
+        <h2 id="resultMessage"></h2>
+        <canvas id="resultChart" width="300" height="300"></canvas>
+      </div>
     </main>
+
     <footer>
-      <form>
-        <div id="questionsBox">
-          <span>QUESTION</span><span> 1</span
-          ><span class="totalQuestions">/10</span>
-        </div>
-      </form>
+      <div id="questionsCounter"></div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="../js/question.js"></script>
   </body>
 </html>
